Fix broken unit test